* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.0.2-0
- Support puppetlabs/stdlib 6.x and puppet 6.x.

* Wed Feb 13 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Use Simplib::Port data type in lieu of deprecated, simplib
  Puppet 3 validate_port()
- Use new Vnc::Geometry data type in lieu of deprecated,
  stdlib validate_re()
- Updated a URL in the README.md

* Thu Nov 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Update the contribution guide URL in the README.md

* Thu Sep 13 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- Add support for Puppet 5 and OEL
- Convert docs to yard tags and add reference.md
- Added $package_ensure parameters to vnc::server and vnc::client
  - Changed the packages from 'latest' to 'installed'
  - Each will also respect `simp_options::package_ensure`

* Fri Jun 22 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Remove automatic setting of the XDMCP setting in GDM - BREAKING
  - It was determined that this should be something that the administrator
    should explicitly opt into by setting it in the GDM module settings via
    Hiera since it has security implications

* Tue May 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.3-0
- Ensure that the default VNC sessions set the IPv4 flag
- Ensure that the default VNC sessions set the banner to /dev/null

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Wed Jan 02 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.1-0
- Removed unecessary code and deps after major dep releases
- Locked versions of all build and test deps

* Wed Dec 14 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Use simp_options module for global catalysts
- Use strong typed parameters

* Mon Dec 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
- Replaced xwindows with gdm.

* Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Bump major version
