@@ -1,5 +1,7 @@
-* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.0.2-0
-- Support puppetlabs/stdlib 6.x and puppet 6.x.
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.1.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
 
 * Wed Feb 13 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
 - Use Simplib::Port data type in lieu of deprecated, simplib
